# hifz

./: .gitignore  .mcp.json  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
adapters/claude-code/.claude-plugin/: marketplace.json
adapters/claude-code/hooks/: hooks.json
adapters/claude-code/scripts/: notification.mjs  notification.mjs.map  plan-capture.mjs  post-compact.mjs  post-tool-failure.mjs  post-tool-failure.mjs.map  post-tool-use.mjs  post-tool-use.mjs.map  pre-compact.mjs  pre-compact.mjs.map  pre-tool-use.mjs  pre-tool-use.mjs.map  prompt-submit.mjs  prompt-submit.mjs.map  session-end.mjs  stop.mjs  (+10 more)
benchmark/: download_dataset.sh  longmemeval_bench.rs  memory_bench.rs
docs/architecture/: memory.md
docs/research/: memory-architecture.md
plugin/: .mcp.json
plugin/.claude-plugin/: plugin.json
plugin/scripts/: notification.mjs  plan-capture.mjs  post-compact.mjs  post-tool-failure.mjs  post-tool-use.mjs  pre-compact.mjs  pre-tool-use.mjs  prompt-submit.mjs  session-end.mjs  session-start.mjs  stop.mjs  subagent-start.mjs  subagent-stop.mjs  task-completed.mjs
scripts/: smoke-test.sh
src/: commit.rs  compress.rs  config.rs  consolidate.rs  context.rs  core_mem.rs  db.rs  dedup.rs  digest.rs  embed.rs  entities.rs  episode.rs  evolve.rs  forget.rs  git_detect.rs  ground.rs  lib.rs  link.rs  llm_rerank.rs  main.rs  models.rs  observe.rs  ollama.rs  plan.rs  prompts.rs  rank.rs  reindex.rs  remember.rs  rerank.rs  run.rs  search.rs  trace.rs
src/mcp/: mod.rs  tools.rs
src/web/: api.rs  mod.rs
website/: package-lock.json  package.json  vite.config.ts
website/src/: app.css
(+19 files in other folders)
